Started using objects in RQ4 based on Shactor QSE (not working)